--- a/assist/css/style.css
+++ b/assist/css/style.css
@@ -839,6 +839,7 @@ section{
 #event-explain img{
   width: 100%;
 }
+
 #fh p{
   color: #808080;
   font-size: 13px;
@@ -1289,6 +1290,7 @@ footer{
   overflow-x: auto;
   overflow-y: hidden;
 }
+
 .card {
   background-color: #fff0 !important;
   border: none !important;
@@ -1310,6 +1312,32 @@ footer{
 .card-text {
   font-size: 85%;
 }
+.row-card1{
+  align-items: stretch;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+.card1 {
+  background-color: #fff0 !important;
+  border: none !important;
+  /*float: left;*/
+  max-width: 304px;
+  padding: 10px 10px;
+  margin-bottom: 2rem;
+  border: 0;
+  flex-basis: 94%;
+  flex-grow: 0;
+  flex-shrink: 0;
+  margin-left: -20px;
+}
+
+#fh .col-xs-12{
+  padding-left: 10px;
+  padding-right: 10px;
+}
 
 
 
@@ -1320,10 +1348,14 @@ footer{
   .id_intro .login {
     margin-left: 100px;
   }
+  
 }
 @media (max-width: 991px){
   section {
     padding: 30px 0;
+  }
+  #fh button{
+    margin-top: inherit;
   }
   /* #features .container{
     max-width: 100% !important;
