--- a/assist/css/style.css
+++ b/assist/css/style.css
@@ -802,7 +802,7 @@ list-style-type:none;
 h1{
   font-weight: 700 !important;
   font-size: 1.8em !important;
-  text-align: center !important;
+  text-align: center;
   padding-bottom:  20px;
 }
 #company {
@@ -889,6 +889,7 @@ section{
 .swiper4 .swiper-slide {
   padding: 20px;
   display: block;
+  box-shadow:  0px 0px 15px 1px rgba(0,0,0,0.04);
 }
 .outer-hub{
   width: 100%;
@@ -1355,6 +1356,12 @@ footer{
   section {
     padding: 30px 0;
   }
+  h1{
+    text-align: left;
+  }
+  footer{
+    padding: 20px 10px;
+  }
   #fh button{
     margin-top: inherit;
   }
@@ -1377,6 +1384,31 @@ footer{
   }
   .carousel-indicators{
     padding-bottom: 20px;
+  }
+  .outer-form button {
+    padding: 15px 26px;
+    background-color: #4c3aad;
+    border: 0;
+    border-radius: 40px;
+    /* margin-left: 10px; */
+    margin-top: 20px;
+}
+  .inner-form {
+    background-color: #fff;
+    padding: 30px 20px;
+    margin: auto;
+    border-radius: 5px;
+  }
+  .outer-form input {
+    padding: 15px;
+    border: 1px solid rgba(152, 152, 152, 0.4);
+    background: #fff;
+    margin: -6px;
+    outline: none;
+    display: block;
+    color: #6e6e6f;
+    margin: auto;
+    width: 100%;
   }
 }
 
